fix: incorrect imports in example code

--- a/example/views/elements/pre.edge
+++ b/example/views/elements/pre.edge
@@ -4,5 +4,5 @@
   }
 }">
   <button @click="copy"> Copy to clipboard </button>
-  @!component('dimer_element', { node, renderer })~
+  @!component('dimer_element', { node, pipeline })~
 </div>
