--- a/example/views/guide.edge
+++ b/example/views/guide.edge
@@ -69,7 +69,7 @@
 	<section class="doc">
 		@!component('dimer_contents', {
       nodes: file.ast.children,
-      renderer: dimerRenderer
+      pipeline
     })
 	</section>
 </body>
